# horsies

./: .gitignore  LICENSE  README.md  pyproject.toml  worker-missing-tests-analysis.txt
.github/workflows/: coverage.yml  deploy-docs.yml  release.yml  tests-full.yml  tests.yml
horsies/: __init__.py
horsies/.agents/skills/: SKILL.md  configs.md  tasks.md  workflows.md
horsies/core/: app.py  banner.py  cli.py  defaults.py  docs_fetcher.py  errors.py  exception_mapper.py  logging.py  task_decorator.py
horsies/core/brokers/: __init__.py  listener.py  postgres.py  result_types.py
horsies/core/codec/: serde.py
horsies/core/models/: app.py  broker.py  queues.py  recovery.py  resilience.py  schedule.py  task_pg.py  task_send_types.py  tasks.py  workflow.py  workflow_pg.py
horsies/core/registry/: tasks.py
horsies/core/scheduler/: __init__.py  calculator.py  service.py  state.py
horsies/core/schemas/: __init__.py  indexes.py  migrations.py  triggers.py
horsies/core/types/: result.py  status.py
horsies/core/utils/: db.py  fingerprint.py  imports.py  loop_runner.py  retry.py  url.py
horsies/core/worker/: child_pool.py  child_runner.py  config.py  current.py  sql.py  worker.py
horsies/core/workflows/: __init__.py  engine.py  lifecycle.py  lifecycle_types.py  recovery.py  registry.py  sql.py  start_types.py
horsies/docs/: DOCUMENTATION_STANDARD.md  cli.md  index.md
scripts/: update_coverage_badge.py
syce/: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  STRUCTURE.md  layout.md
syce/sql/tasks/: aggregated-breakdown.sql  distinct-filter-values.sql  filtered-aggregation.sql  task-attempts-by-task-id.sql  task-detail-by-id.sql  task-list-by-worker.sql  task-status-view.sql
syce/sql/worker/: active-workers.sql  cleanup-old-snapshots.sql  cluster-capacity-summary.sql  cluster-utilization-trend.sql  dead-workers.sql  latest-worker-snapshot.sql  overloaded-workers.sql  snapshot-age-distribution.sql  stale-claims-detection.sql  worker-avg-utilization-1hour.sql  worker-load-5min.sql  worker-queues.sql  worker-uptime.sql
syce/sql/workflows/: filtered-workflow-list.sql  workflow-detail.sql  workflow-list.sql  workflow-status-aggregation.sql  workflow-summary.sql
syce/src/: action.rs  app.rs  cli.rs  components.rs  errors.rs  listener.rs  main.rs  state.rs  theme.rs  tui.rs
syce/src/components/: dashboard.rs  error_modal.rs  filter_sidebar.rs  help.rs  home.rs  maintenance.rs  search.rs  status_bar.rs  task_detail.rs  task_list.rs  tasks.rs  workers.rs  workflow_detail.rs  workflows.rs
syce/src/db/: connection.rs  queries.rs
syce/src/models/: metrics.rs  mod.rs  task.rs  worker.rs  workflow.rs
tests/: __init__.py  conftest.py  run_all_tests.sh
tests/e2e/: conftest.py  test_fanout_saturation.py  test_layer1_tasks.py  test_layer2_cluster.py  test_layer3_scheduler.py  test_layer4_workflow_structure.py  test_layer5_workflow_dataflow.py  test_layer6_workflow_advanced.py
tests/e2e/helpers/: assertions.py  db.py  worker.py  workflow.py
tests/e2e/tasks/: __init__.py  basic.py  instance.py  instance_cluster_cap.py  instance_custom.py  instance_recovery.py  instance_requeue_guard.py  instance_retry_precedence.py  instance_scheduler.py  instance_scheduler_invalid.py  instance_softcap.py  queues_custom.py  retry.py  scheduler.py  workflows.py
tests/integration/: conftest.py  test_cascade_resume_bug.py  test_claim_cap_expired.py  test_finalize_status_guard.py  test_listener_reconnect.py  test_reaper_retention_cleanup.py  test_task_attempt_history.py  test_worker_filter_nonrunnable.py  test_worker_finalize_after.py  test_worker_finalize_two_phase.py  test_worker_finalize_workflow_phase.py  test_worker_handle_workflow_task.py  test_worker_load_persisted_task_result.py  test_worker_persist_terminal_state.py  test_worker_retry_scheduling.py  test_workflow_args_from.py  test_workflow_composed_patterns.py  test_workflow_condition_fallback.py  test_workflow_conditions.py  test_workflow_ctx.py  test_workflow_dag_patterns.py  test_workflow_error_handling.py  test_workflow_handle.py  test_workflow_join.py  test_workflow_kwargs_compat.py  test_workflow_recovery.py  test_workflow_start.py  test_workflow_subworkflow.py  test_workflow_subworkflow_conditions.py
tests/unit/: test_app_config.py  test_broker_listener.py  test_broker_postgres.py  test_cli.py  test_db_utils.py  test_docs_fetcher.py  test_ensure_schema_retry.py  test_error_code_families.py  test_errors.py  test_exception_mapper.py  test_lifecycle_pause_resume_result.py  test_logging.py  test_loop_runner.py  test_multi_error_collection.py  test_queue_mismatch_guard.py  test_resilience_config.py  test_resolve_workflow_def_nodes.py  test_result_type.py  test_retry_backoff.py  test_retry_decision.py  test_retry_utils.py  test_schedule_calculator.py  test_schedule_models.py  test_schedule_state.py  test_scheduler_service.py  test_serde_dataclass.py  test_serde_datetime.py  test_serde_mapping_keys.py  test_task_decorator.py  test_task_discovery.py  test_task_pg_model.py  test_task_registry.py  test_task_retry_validation.py  test_terminal_states.py  test_typing_utils.py  test_url_masking.py  test_worker_child_runner.py  test_worker_claim_pipeline.py  test_worker_helpers.py  test_worker_imports.py  (+11 more)
website/: README.md  astro.config.mjs  package.json
website/public/: llms.txt
(+50 files in other folders)
