[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horsies"
version = "0.1.0a15"
description = "A Python library for distributed task execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Suleyman Ozkeskin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = [
    "task-queue",
    "workflow-engine",
    "dag",
    "scheduling",
    "distributed",
    "postgres",
    "async",
]
dependencies = [
    "greenlet>=3.3.0",
    "psutil>=7.2.1",
    "psycopg>=3.3.2",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
pg-binary = ["psycopg-binary>=3.3.2"]
pg-c = ["psycopg-c>=3.3.2"]

[project.urls]
Homepage = "https://github.com/suleymanozkeskin/horsies"
Documentation = "https://suleymanozkeskin.github.io/horsies/"
Repository = "https://github.com/suleymanozkeskin/horsies"
Issues = "https://github.com/suleymanozkeskin/horsies/issues"

[project.scripts]
horsies = "horsies.core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["horsies*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "psycopg-binary>=3.3.2",
    "pyright>=1.1.408",
    "ty>=0.0.15",
    "python-dotenv>=1.2.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests requiring database and worker process",
    "integration: integration tests requiring a live database",
    "flaky: timing-sensitive tests that may fail under load",
]

[tool.pyright]
typeCheckingMode = "strict"


[tool.ruff.lint]
ignore = ["E712"]
select = ["Q"]

[tool.ruff.format]
quote-style = "single"



[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
